--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "Madoka-doc",
+  "name": "docs", 
   "version": "1.0.0",
-  "description": "",
+  "description": "Madoka Docs",
+  "repository": "https://github.com/MadokaProject/docs",
+  "author": "MadokaProject",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "vuepress": "^1.9.7"
   }
