--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,7 @@ jobs:
       run: npm ci
 
     - name: Generate Static Files
-      run: npm run docs:build
-
-    - name: Copy Files
-      run: cp -r files/. docs/.vuepress/dist
+      run: npm run docs:build && ls && pwd
 
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
