--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-node_modules/*
+# npm
+package-lock.json
+node_modules
+yarn-error.log
+
+# vscode
+.vscode
+
+#yarn
+yarn.lock
+
+# vuepress
+docs/.vuepress/dist
+
+# 百度链接推送
+urls.txt
+
+# mac
+.DS_Store
