--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs", 
+  "name": "docs",
   "version": "1.0.0",
   "description": "Madoka Docs",
   "repository": "https://github.com/MadokaProject/docs",
@@ -27,5 +27,8 @@
     "vuepress-theme-vdoing": "^1.9.4",
     "yamljs": "^0.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue-tabs-component": "^1.5.0",
+    "vuepress-plugin-tabs": "^0.3.0"
+  }
 }
